# dsdk-facet-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
crates/facet-client/: Cargo.toml
crates/facet-client/src/: lib.rs
crates/facet-client/src/lock/: mem.rs  mod.rs  postgres.rs
crates/facet-client/src/lock/tests/: lock_guard.rs  mem.rs  mod.rs
crates/facet-client/src/token/: mem.rs  mod.rs  postgres.rs
crates/facet-client/src/token/tests/: api_create_token.rs  api_get_token.rs  mem.rs  mocks.rs  mod.rs
crates/facet-client/src/util/: mod.rs
crates/facet-client/tests/: lock_manager_postgres.rs  token_api.rs  token_store_postgres.rs
crates/facet-common/: Cargo.toml
crates/facet-common/src/: context.rs  lib.rs
crates/facet-common/src/auth/: mem.rs  mod.rs  postgres.rs
crates/facet-common/src/auth/tests/: mem.rs
crates/facet-common/src/context/: mod.rs
crates/facet-common/src/jwt/: jwtutils.rs  mod.rs
crates/facet-common/src/jwt/tests/: mod.rs
crates/facet-common/src/lock/: mem.rs  mod.rs  postgres.rs
crates/facet-common/src/lock/tests/: lock_guard.rs  mem.rs
crates/facet-common/src/proxy/s3/: mod.rs  opparser.rs
crates/facet-common/src/proxy/s3/tests/: auth.rs  s3.rs
crates/facet-common/src/token/: mem.rs  mod.rs  oauth.rs  postgres.rs
crates/facet-common/src/token/tests/: api_create_token.rs  api_get_token.rs  mem.rs  mocks.rs  mod.rs  oauth.rs
crates/facet-common/src/util/: backoff.rs  clock.rs  encryption.rs  mod.rs
crates/facet-common/src/vault/: hashicorp.rs  mod.rs
crates/facet-common/src/vault/hashicorp/: auth.rs  client.rs  config.rs  mod.rs  renewal.rs  state.rs
crates/facet-common/src/vault/tests/: hashicorp.rs  mem.rs  mod.rs
crates/facet-common/tests/: auth_postgres.rs  lock_manager_postgres.rs  proxy_s3.rs  proxy_s3_auth.rs  token_api.rs  token_store_postgres.rs  vault_hashicorp.rs  vault_hashicorp_renewal.rs
crates/facet-common/tests/common/: keycloak.rs  mocks.rs  mod.rs  postgres.rs  proxy_s3.rs  vault.rs
crates/facet-consumer/: Cargo.toml
crates/facet-consumer/src/: lib.rs
crates/facet-consumer/src/lock/: mem.rs  mod.rs  postgres.rs
crates/facet-consumer/src/lock/tests/: mem.rs
crates/facet-consumer/src/token/: jwt.rs  mem.rs  mod.rs  oauth.rs  postgres.rs
crates/facet-consumer/src/token/tests/: api_get_token.rs  jwt.rs  jwt_fixtures.rs  mem.rs  mod.rs  oauth.rs
crates/facet-consumer/tests/: lock_manager_postgres.rs  token_api.rs  token_store_postgres.rs
crates/facet-consumer/tests/common/: mod.rs
crates/facet-core/: Cargo.toml
crates/facet-core/src/jwt/: jwtutils.rs  mod.rs
crates/facet-core/src/jwt/tests/: common.rs  local.rs  mod.rs  signing_key_record.rs  vault_jwt_generator.rs  vault_signing_key_resolver.rs
crates/facet-core/src/lock/: mem.rs
crates/facet-core/src/token/: mod.rs
crates/facet-core/src/util/: clock.rs
crates/facet-core/src/vault/: mod.rs
crates/facet-hashicorp-vault/: Cargo.toml
crates/facet-hashicorp-vault/src/: auth.rs  client.rs  config.rs  lib.rs  renewal.rs
crates/facet-hashicorp-vault/src/tests/: auth.rs  client.rs  mod.rs  renewal.rs
crates/facet-hashicorp-vault/tests/: vault_hashicorp.rs  vault_hashicorp_renewal.rs  vault_signing.rs
crates/facet-postgres/: Cargo.toml
crates/facet-proxy/: Cargo.toml
crates/facet-testcontainers/src/: vault.rs
crates/facet-token-provider/: Cargo.toml
crates/facet-token-provider/src/: lib.rs
e2e/: Cargo.toml  Makefile  README.md
e2e/manifests/: namespace.yaml  service-accounts.yaml  test-pod.yaml  vault-agent-config.yaml  vault-deployment.yaml
e2e/scripts/: build-and-load-image.sh  build-test-client.sh  cleanup.sh  configure-vault.sh  run-tests.sh  setup.sh  verify-setup.sh
e2e/src/: lib.rs  utils.rs
e2e/src/tests/: k8s_vault_sidecar.rs  mod.rs
e2e/test-client/: Cargo.toml  Dockerfile
e2e/test-client/src/: main.rs
