[workspace]
members = ["crates/facet-client"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
bon = "3"
chrono = { version = "0.4" }
tokio-postgres = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres"] }
uuid = { version = "1", features = ["v4"] }