[package]
name = "facet-client"
version.workspace = true
edition.workspace = true

[dependencies]
bon = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
log = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
uuid = { workspace = true }