[package]
name = "facet-common"
version.workspace = true
edition.workspace = true

[dependencies]
bon = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sodiumoxide = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
jsonwebtoken = { workspace = true, features = ["rust_crypto"] }
serde_json = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
pkcs8 = { workspace = true }
rstest = { workspace = true }
rsa = { workspace = true }

[dev-dependencies]
