[package]
name = "facet-consumer"
version.workspace = true
edition.workspace = true

[dependencies]
bon = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
sodiumoxide = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
jsonwebtoken = { workspace = true, features = ["rust_crypto"] }
serde_json = { workspace = true }
rand = { workspace = true }
facet-common = { path = "../facet-common" }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
mockall = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
ed25519-dalek = { workspace = true }
pkcs8 = { workspace = true }
rand = { workspace = true }
rstest = { workspace = true }
rsa = { workspace = true }
wiremock = { workspace = true }